Add Tests. Fix issues with REST API.
